--- a/pages/to-pay-order/index.wxss
+++ b/pages/to-pay-order/index.wxss
@@ -1,134 +1,116 @@
-.container {
-    background-color: #F2f2f2;
+.container{
+    background-color:#F2f2f2;
 }
-
-.address-box {
+.address-box{
     width: 100%;
-    background: url(https://cdn.it120.cc/images/weappshop/arrow-right.png) no-repeat 705rpx center,url(https://cdn.it120.cc/images/weappshop/addr-line.png) no-repeat center bottom;
+    background: url(https://cdn.it120.cc/images/weappshop/arrow-right.png) no-repeat 705rpx center ,
+                url(https://cdn.it120.cc/images/weappshop/addr-line.png) no-repeat center bottom;
     background-size: 16rpx auto,750rpx auto;
     background-color: #fff;
-    margin: 20rpx 0;
+    margin: 20rpx 0; 
 }
-
-.add-addres {
+.add-addres{
     width: 100%;
 }
-
-.add-address .title {
+.add-address .title{
     font-size: 28rpx;
     color: #000;
     margin-left: 30rpx;
     background: url(https://cdn.it120.cc/images/weappshop/ico-add-addr.png) no-repeat left center;
     background-size: 60rpx auto;
-    padding: 40rpx 0 40rpx 90rpx;
+    padding: 40rpx 0 40rpx 90rpx; 
 }
-
-.show-address {
+.show-address{
     width: 664rpx;
     box-sizing: border-box;
     padding-left: 100rpx;
     background: url(https://cdn.it120.cc/images/weappshop/ico-addr.png) no-repeat 30rpx 35rpx;
     background-size: 30rpx auto;
 }
-
-.show-address .name-tel {
+.show-address .name-tel{
     font-size: 28rpx;
     color: #000;
     padding: 30rpx 0 20rpx 0;
 }
-
-.show-address .addr-text {
+.show-address .addr-text{
     font-size: 24rpx;
     color: #888;
     padding-bottom: 34rpx;
     line-height: 36rpx;
 }
-
-form {
+form{
     width: 100%;
 }
-
-.goods-list {
-    width: 100%;
+.goods-list{
+    width:100%;
     background-color: #fff;
     margin-bottom: 20rpx;
 }
-
-.goods-list .list-title {
+.goods-list .list-title{
     font-size: 28rpx;
     color: #000;
     padding: 30rpx 0 25rpx 30rpx;
 }
-
-.goods-list .a-goods {
+.goods-list  .a-goods{
     width: 720rpx;
     margin-left: 30rpx;
     display: flex;
+    /*justify-content: space-between;*/
     border-top: 1px solid #eee;
     padding: 30rpx 30rpx 30rpx 0;
 }
-
-.goods-list .a-goods .img-box {
+.goods-list  .a-goods .img-box{
     width: 160rpx;
-    height: 160rpx;
+    height:160rpx;
     overflow: hidden;
     margin-right: 20rpx;
     background-color: #d8d8d8;
 }
 
-.goods-list .img-box .img {
+.goods-list .img-box .img{
     width: 160rpx;
-    height: 160rpx;
+    height:160rpx;
 }
-
-.goods-list .a-goods .text-box {
+.goods-list  .a-goods .text-box{
     width: 510rpx;
     box-sizing: border-box;
     padding-top: 10rpx;
 }
-
-.a-goods .text-box .arow {
+.a-goods .text-box .arow{
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-.a-goods .text-box .arow .goods-name {
-    width: 360rpx;
-    font-size: 26rpx;
-    height: 74rpx;
-    color: #000000;
-    line-height: 1.6;
-    overflow: hidden;
-}
-
-.a-goods .text-box .arow01 {
+ }
+.a-goods .text-box .arow .goods-name{
+     width: 360rpx;
+     font-size:26rpx;
+     height: 74rpx;
+     color:#000000;
+     line-height: 1.6;
+     overflow: hidden;
+ }
+.a-goods .text-box .arow01{
     margin-bottom: 30rpx;
 }
-
-.a-goods .text-box .arow .goods-price {
-    font-size: 26rpx;
-    color: #000000;
+.a-goods .text-box .arow .goods-price{
+    font-size:26rpx;
+    color:#000000;
     align-self: flex-start;
 }
-
-.a-goods .text-box .arow .goods-label {
+.a-goods .text-box .arow .goods-label{
     font-size: 26rpx;
     color: #999;
 }
-
-.a-goods .text-box .arow .goods-num {
+.a-goods .text-box .arow .goods-num{
     font-size: 26rpx;
     color: #999;
 }
-
-.peisong-way {
+.peisong-way{
     width: 100%;
     background-color: #fff;
     margin-bottom: 20rpx;
 }
-
-.peisong-way .row-box {
+.peisong-way .row-box{
     width: 720rpx;
     display: flex;
     justify-content: space-between;
@@ -137,31 +119,26 @@ form {
     padding: 24rpx 0 24rpx 30rpx;
     border-bottom: 1rpx solid #eee;
 }
-
-.peisong-way .row-label {
+.peisong-way .row-label{
     font-size: 28rpx;
     color: #000;
 }
-
-.peisong-way .right-text {
+.peisong-way .right-text{
     font-size: 28rpx;
     color: #666;
     padding-right: 30rpx;
 }
-
-.peisong-way .liuyan {
+.peisong-way .liuyan{
     width: 510rpx;
     font-size: 28rpx;
 }
-
-.goods-info {
+.goods-info{
     width: 100%;
     background-color: #fff;
     margin-bottom: 120rpx;
     padding-bottom: 24rpx;
 }
-
-.goods-info .row-box {
+.goods-info .row-box{
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -171,12 +148,10 @@ form {
     font-size: 28rpx;
     color: #000;
 }
-
-.goods-info .row-box .right-text {
+.goods-info .row-box .right-text{
     text-align: right;
 }
-
-.jiesuan-box {
+.jiesuan-box{
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -184,32 +159,31 @@ form {
     position: fixed;
     bottom: 0;
     left: 0;
-    border-top: 1px solid #eee;
+    border-top:1px solid #eee; 
     background-color: #fff;
 }
-
-.jiesuan-box .to-pay-btn {
-    width: 250rpx;
+.jiesuan-box .to-pay-btn{
+    width:250rpx;
     text-align: center;
     height: 100%;
     line-height: 100rpx;
     background-color: #e64340;
-    font-size: 32rpx;
-    color: #ffffff;
+    font-size:32rpx;
+    color:#ffffff;
     border-radius: 0;
 }
 
-.jiesuan-box .left-price {
+.jiesuan-box  .left-price{
     display: flex;
     width: 500rpx;
-    justify-content: flex-end;
+    justify-content:flex-end;
     line-height: 100rpx;
     padding: 0 30rpx 0 0;
-    font-size: 28rpx;
+    font-size:28rpx;
     box-sizing: border-box;
 }
 
-.jiesuan-box .total {
+.jiesuan-box .total{
     color: #e64340;
     text-align: right;
 }
