--- a/pages/select-address/index.wxss
+++ b/pages/select-address/index.wxss
@@ -1,14 +1,13 @@
 .container {
-    background-color: #F2f2f2;
+    background-color:#F2f2f2;
 }
-
-.address-list {
+.address-list{
     width: 100%;
     background-color: #fff;
     margin-top: 20rpx;
+    padding-bottom: 100rpx;
 }
-
-.address-list .a-address {
+.address-list .a-address{
     width: 720rpx;
     margin-left: 30rpx;
     display: flex;
@@ -17,29 +16,24 @@
     padding: 30rpx 0;
     border-bottom: 1rpx solid #eee;
 }
-
-.a-address .left-text {
+.a-address .left-text{
     width: 610rpx;
     box-sizing: border-box;
     padding-left: 58rpx;
 }
-
-.a-address .left-text.active {
+.a-address .left-text.active{
     background: url(https://cdn.it120.cc/images/weappshop/addr-active.png) no-repeat left center;
     background-size: 28rpx auto;
 }
-
-.a-address .left-text .name-tel {
+.a-address .left-text .name-tel{
     margin-bottom: 20rpx;
 }
-
-.a-address .left-text .address-box {
-    font-size: 24rpx;
-    color: #888888;
-    line-height: 36rpx;
+.a-address .left-text .address-box{
+    font-size:24rpx;
+    color:#888888;
+    line-height:36rpx;
 }
-
-.a-address .right-edit {
+.a-address .right-edit{
     width: 109rpx;
     height: 100%;
     padding: 50rpx 0 50rpx 58rpx;
@@ -47,22 +41,19 @@
     background: url(https://cdn.it120.cc/images/weappshop/addr-edit.png) no-repeat 43rpx center;
     background-size: 35rpx auto;
 }
-
-.bottom-box {
+.bottom-box{
     position: fixed;
     width: 100%;
     bottom: 0;
-    font-size: 28rpx;
-    color: #000000;
+    font-size:28rpx;
+    color:#000000;
     border-top: 1rpx solid #eee;
-    height: 100rpx;
+    height:100rpx;
     line-height: 100rpx;
-    background-color: #fff;
-    background: url(https://cdn.it120.cc/images/weappshop/arrow-right.png) no-repeat 705rpx center;
+    background: #fff url(https://cdn.it120.cc/images/weappshop/arrow-right.png) no-repeat 705rpx center;
     background-size: 15rpx auto;
 }
-
-.bottom-box .add-btn {
+.bottom-box .add-btn{
     margin-left: 30rpx;
     padding-left: 70rpx;
     background: url(https://cdn.it120.cc/images/weappshop/add-addr.png) no-repeat left center;
