--- a/pages/order-list/index.wxss
+++ b/pages/order-list/index.wxss
@@ -1,10 +1,9 @@
-.container {
+.container{
     width: 100%;
     background-color: #F2f2f2;
 }
-
-.status-box {
-    width: 100%;
+.status-box{
+    width:100%;
     height: 88rpx;
     line-height: 88rpx;
     display: flex;
@@ -12,33 +11,29 @@
     align-items: center;
     background-color: #fff;
 }
-
-.status-box .status-label {
+.status-box .status-label{
     width: 150rpx;
     height: 100%;
     text-align: center;
-    font-size: 28rpx;
-    color: #353535;
+    font-size:28rpx;
+    color:#353535;
     box-sizing: border-box;
     position: relative;
 }
-
-.status-box .status-label.active {
-    color: #e64340;
+.status-box .status-label.active{
+    color:#e64340;
     border-bottom: 6rpx solid #e64340;
 }
-
-.status-box .status-label .red-dot {
+.status-box .status-label .red-dot{
     width: 16rpx;
     height: 16rpx;
     position: absolute;
     left: 116rpx;
-    top: 23rpx;
+    top:23rpx;
     background-color: #f43530;
     border-radius: 50%;
 }
-
-.no-order {
+.no-order{
     width: 100%;
     position: absolute;
     bottom: 0;
@@ -49,55 +44,39 @@
     padding-top: 203rpx;
     background-color: #F2f2f2;
 }
-
-.no-order-img {
+.no-order-img{
     width: 81rpx;
     height: 96rpx;
     margin-bottom: 31rpx;
 }
-
-.no-order .text {
-    font-size: 28rpx;
-    color: #999999;
-    text-align: center;
+.no-order .text{
+    font-size:28rpx;
+    color:#999999;
+    text-align: center
 }
-
-.order-list {
+.order-list{
     width: 100%;
 }
-
-.order-list .a-order {
+.order-list .a-order{
     width: 100%;
     background-color: #fff;
     margin-top: 20rpx;
 }
-
-.order-list .a-order .order-date {
+.order-list .a-order .order-date{
     padding: 0 30rpx;
     height: 88rpx;
     display: flex;
     justify-content: space-between;
-    font-size: 26rpx;
-    color: #000000;
+    font-size:26rpx;
+    color:#000000;
     align-items: center;
 }
-
-.order-list .a-order .order-dates {
-    padding: 0 30rpx;
-    height: 48rpx;
-    display: flex;
-    justify-content: space-between;
-    font-size: 26rpx;
-    color: #868282;
-    align-items: center;
+.order-list .a-order .order-date .red{
+    font-size:26rpx;
+    color:#e64340;
 }
-
-.order-list .a-order .order-date .red {
-    font-size: 26rpx;
-    color: #e64340;
-}
-
-.a-order .goods-info,.goods-img-container {
+.a-order  .goods-info,
+.goods-img-container{
     width: 720rpx;
     margin-left: 30rpx;
     border-top: 1rpx solid #eee;
@@ -106,36 +85,32 @@
     display: flex;
     align-items: center;
 }
-
-.goods-info .img-box {
+.goods-info .img-box{
     width: 120rpx;
     height: 120rpx;
     overflow: hidden;
     margin-right: 30rpx;
     background-color: #f7f7f7;
 }
-
-.goods-info .img-box .goods-img,.goods-img-container .img-box .goods-img {
+.goods-info .img-box .goods-img,
+.goods-img-container .img-box .goods-img{
     width: 120rpx;
     height: 120rpx;
 }
-
-.goods-info .goods-des {
+.goods-info  .goods-des{
     width: 540rpx;
     height: 78rpx;
     line-height: 39rpx;
-    font-size: 26rpx;
-    color: #000000;
+    font-size:26rpx;
+    color:#000000;
     overflow: hidden;
 }
-
-.goods-img-container {
+.goods-img-container{
     height: 180rpx;
     box-sizing: border-box;
     white-space: nowrap;
 }
-
-.goods-img-container .img-box {
+.goods-img-container .img-box{
     width: 120rpx;
     height: 120rpx;
     overflow: hidden;
@@ -143,8 +118,7 @@
     background-color: #f7f7f7;
     display: inline-block;
 }
-
-.order-list .a-order .price-box {
+.order-list .a-order .price-box{
     position: relative;
     width: 720rpx;
     height: 100rpx;
@@ -154,15 +128,13 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    font-size: 26rpx;
+    font-size:26rpx;
 }
-
-.order-list .a-order .price-box .total-price {
-    font-size: 26rpx;
-    color: #e64340;
+.order-list .a-order .price-box .total-price{
+    font-size:26rpx;
+    color:#e64340;
 }
-
-.a-order .price-box .btn {
+.a-order .price-box .btn{
     width: 166rpx;
     height: 60rpx;
     box-sizing: border-box;
@@ -171,15 +143,13 @@
     border-radius: 6rpx;
     margin-left: 20rpx;
 }
-
-.a-order .price-box .cancel-btn {
+.a-order .price-box .cancel-btn{
     border: 1rpx solid #ccc;
     position: absolute;
     right: 216rpx;
-    top: 20rpx;
+    top:20rpx;
 }
-
-.a-order .price-box .topay-btn {
-    border: 1px solid #e64340;
+.a-order .price-box .topay-btn{
+    border:1px solid #e64340;
     color: #e64340;
 }
