--- a/pages/order-list/index.wxml
+++ b/pages/order-list/index.wxml
@@ -1,41 +1,40 @@
 <view class="container">
     <view class="status-box">
-        <view bindtap="statusTap" class="status-label {{index==currentType?'active':''}}" data-index="{{index}}" wx:for="{{statusType}}" wx:key="{{index}}">
+        <view bindtap="statusTap" class="status-label {{index == currentType ? 'active' : ''}}" wx:for-items="{{statusType}}" wx:key="{{index}}" data-index="{{index}}">
             {{item}}
             <view class="{{tabClass[index]}}"></view>
         </view>
     </view>
-    <view class="no-order" hidden="{{orderList?true:false}}">
-        <image class="no-order-img" src="/images/no-order.png"></image>
+    <view class="no-order" hidden="{{orderList ? true : false}}">
+        <image src="/images/no-order.png" class="no-order-img"></image>
         <view class="text">暂无订单</view>
     </view>
-    <view class="order-list" hidden="{{orderList?false:true}}">
-        <view class="a-order" wx:for="{{orderList}}" wx:key="{{index}}">
+    <view class="order-list" hidden="{{orderList ? false : true}}">
+        <view class="a-order" wx:for-items="{{orderList}}" wx:key="{{index}}">
             <view class="order-date">
                 <view class="date-box">下单时间：{{item.dateAdd}}</view>
-                <view class="status {{item.status==-1||item.status==4?'':'red'}}">{{item.statusStr}}</view>
+                <view class="status {{(item.status==-1 || item.status==4) ? '':'red'}}">{{item.statusStr}}</view>
             </view>
-            <view class="order-dates" wx:if="{{item.status==0}}">
-                <view class="date-boxs">提示：请在30分钟内完成支付，愈期系统自动关闭订单。</view>
-            </view>
-            <view bindtap="orderDetail" class="goods-info" data-id="{{item.id}}">
+            <view class="goods-info" bindtap="orderDetail" data-id="{{item.id}}">
                 <view class="goods-des">
-                    <view>订单号:{{item.orderNumber}} </view>
-                    <view wx:if="{{item.remark&&item.remark!=''}}">备注： {{item.remark}}</view>
+                   <view>订单号:{{item.orderNumber}} </view>
+                   <view wx:if="{{item.remark && item.remark != ''}}">备注： {{item.remark}}</view>
                 </view>
             </view>
-            <view>
-                <scroll-view class="goods-img-container" scrollX="true">
-                    <view class="img-box" wx:for="{{goodsMap[item.id]}}" wx:key="{{index}}">
-                        <image class="goods-img" src="{{item.pic}}"></image>
+            <view >
+                <scroll-view class="goods-img-container" scroll-x="true">
+                    <view class="img-box" wx:for-items="{{goodsMap[item.id]}}" wx:key="{{index}}">
+                        <image src="{{item.pic}}" class="goods-img"></image>
                     </view>
                 </scroll-view>
             </view>
             <view class="price-box">
-                <view class="total-price">合计：¥ {{item.amountReal}}</view>
-                <view bindtap="cancelOrderTap" class="btn cancel-btn" data-id="{{item.id}}" hidden="{{item.status==0?fslse:true}}">取消订单</view>
-                <view bindtap="toPayTap" class="btn topay-btn" data-id="{{item.id}}" data-money="{{item.amountReal}}" hidden="{{item.status==0?fslse:true}}">马上付款</view>
-            </view>
+                <view class="total-price" wx:if="{{item.score <= 0}}">合计：¥ {{item.amountReal}}</view>
+                <view class="total-price" wx:if="{{item.score > 0}}">合计：¥ {{item.amountReal}} + {{item.score}} 积分</view>
+                <view class="btn cancel-btn" hidden="{{item.status==0? fslse : true}}" bindtap="cancelOrderTap"  data-id="{{item.id}}">取消订单</view>
+                <view class="btn topay-btn" hidden="{{item.status==0? fslse : true}}" bindtap="toPayTap" data-id="{{item.id}}" data-money="{{item.amountReal}}" data-score="{{item.score}}">马上付款</view>        
+            </view>  
         </view>
+
     </view>
 </view>
